# bank-statement-parser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/add-bank-parser/: SKILL.md
bank_statement_parser/: __init__.py  cli.py  extractor.py  models.py
bank_statement_parser/parsers/: __init__.py  base.py  factory.py  generic.py  hdfc.py  icici.py  idfc.py  indusind.py  kotak.py  metadata.py  reconciliation.py  registry.py  slice.py  uboi.py
bank_statement_parser/parsers/extractors/: __init__.py  positioning.py  tables.py  wordlines.py
bank_statement_parser/parsers/utils/: __init__.py  amounts.py  channels.py  dates.py
tests/: test_channels.py
